--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ image_thumbs_loc: "/images/thumbs"
 # UI configs
 title:
 subtitle:
-author:
+author: tgonzalez[at]gmail[dot]com
 header:
  title: "Photography"
  subtitle:
