--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ title:
 subtitle:
 author: tgonzalez[at]gmail[dot]com
 header:
- title: "ph"
- subtitle:
+ title:
+ subtitle: tg ph
 footer:
  name:
  bio:
