--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ subtitle:
 author: tgonzalez[at]gmail[dot]com
 header:
  title:
- subtitle: tg ph
+ subtitle:
 footer:
- name:
+ name: tomás gonzález c
  bio:
