--- a/_config.yml
+++ b/_config.yml
@@ -12,4 +12,4 @@ header:
  subtitle: photography
 footer:
  name: tomás gonzález c
- bio: tgonzalez[at]gmail[dot]com
+ bio: tgonzalez [a] gmail [d] com
