--- a/_config.yml
+++ b/_config.yml
@@ -11,5 +11,5 @@ header:
  title:
  subtitle: photography
 footer:
- name: tomás gonzález c
- bio: tgonzalez [a] gmail [d] com
+ name:
+ bio: tomás gonzález c // tgonzalez [a] gmail [d] com
